<resources>
    <string name="app_name">Meal Mate</string>
    <!-- Landing Screen Texts -->
    <string name="app_title">Welcome to MealMate</string>
    <string name="home_desc">Plan meals, create lists, and shop smarter—together!</string>
    <string name="imageDec">Background image for MealMate</string>

    <!-- Button Texts -->
    <string name="signup">Sign Up</string>
    <string name="signIn">Log In</string>
    <string name="logoDesc">This is logo of MealMate </string>
    <string name="alreadyHaveAccountSignIn">Already have an account? <b>Sign In</b></string>


    <!-- Input Field Hints -->
    <string name="enterEmail">Enter your email</string>
    <string name="choosePass">Choose a password</string>
    <string name="confirmPass">Confirm your password</string>

    <string name="enterPass"> Enter your password</string>
    <string name="forgotPas">Forgot Password?</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email">Enter your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_sign_in">Back to Sign In</string>


    <string name="loading">Please wait, MealMate is processing...</string>
    <string name="profile_image_desc">Profile Image</string>
    <string name="upload_photo">Upload Photo </string>
    <string name="full_name">Full Name </string>
    <string name="mobile_number">Mobile Number </string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="age"> Age </string>
    <string name="save_profile"> Save Profile</string>
    <string name="gender"> Select Gender </string>


    <string name="upload_image">Upload Image</string>
    <string name="add_ingredient">Add</string>
    <string name="add_instruction">Add Instruction</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="update_recipe"> Update Recipe</string>

    <string name="title_recipe_name">Recipe Name</string>
    <string name="hint_recipe_name">Enter the recipe name</string>

    <!-- Input Hints -->
    <string name="hint_cook_time">Enter Cook Time (in Minutes)</string>
    <string name="hint_missing_ingredient">Enter missing ingredient</string>

    <!-- Section Titles -->
    <string name="title_instructions">Instructions</string>
    <string name="savedRecipe">Saved Recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>